--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
                         <p>Business wesite</p>
                     </div>
                     <div class="card__side card__side--back big">
-                        <img src="img/mc.jpg" class="card-image" alt="">
+                        <img src="img/mc-image.jpg" class="card-image" alt="">
                     </div>
                 </div>
                 <div class="card second-card">
@@ -71,7 +71,7 @@
                         <p>Non-profit organzation website</p>
                     </div>
                     <div class="card__side card__side--back big">
-                        <img src="img/sda.jpg" class="card-image" alt="">
+                        <img src="img/sda-image.jpg" class="card-image" alt="">
                     </div>
                 </div>
                 <div class="card forth-card">
